# norstar

./: .env.sample  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
nginx/: Dockerfile  nginx.conf
tasks/: models.py  pagination.py  serializer.py  services.py  tests.py  urls.py  utils.py  validators.py  views.py
tasks/migrations/: 0001_initial.py  0002_remove_task_is_important_remove_task_is_main_and_more.py  0003_alter_task_status.py  0004_alter_task_executor_alter_task_owner.py
users/: admin.py  models.py  pagination.py  permissions.py  serializer.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_alter_user_position.py
