[tool.poetry]
name = "norstar"
version = "0.1.0"
description = ""
authors = ["Mikhail Gubin <mgubin82@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.5"
djangorestframework = "^3.16.0"
psycopg2-binary = "^2.9.10"
pillow = "^11.2.1"
django-filter = "^25.1"
djangorestframework-simplejwt = "^5.5.0"
python-dotenv = "^1.1.1"
ipython = "^9.4.0"
coverage = "^7.9.2"
drf-yasg = "^1.21.10"
celery = "^5.5.3"
redis = "^6.2.0"
eventlet = "^0.40.1"
django-celery-beat = "^2.8.1"
django-cors-headers = "^4.7.0"
gunicorn = "^23.0.0"
django-redis = "^6.0.0"
flake8 = "^7.3.0"


[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''
(
    /(
        \ .git
    )/
)poetry
'''

[tool.isort]
line_length = 119
multi_line_output = 3
